--- a/style.css
+++ b/style.css
@@ -193,6 +193,10 @@ a:hover {
     margin: 0 auto;
 }
 
+.svg {
+    margin-left: 14px;
+}
+
 .bckg {
     width: 100%;
     height: 700px;
@@ -344,7 +348,6 @@ button:active {
     max-width: 1280px;
     margin: 0 auto;
     display: flex;
-    padding: 0 16px;
 }
 
 .quality__des {
@@ -352,7 +355,7 @@ button:active {
 }
 
 .quality__row {
-    width: 80%;
+    width: 50%;
     min-width: 400px;
     display: flex;
     flex-direction: column;
@@ -361,14 +364,14 @@ button:active {
 
 .hero {
     width: 650px;
-    height: 450px;
+    height: 500px;
     border: 1px solid rgba(128, 128, 128, 0.589);
 }
 
 .btnq {
     background-color: rgba(78, 14, 196, 0.932);
     color: white;
-    height: 48px;
+    height: 44px;
     margin-top: 4px;
     font-size: 20px;
     border-radius: 48px;
@@ -891,7 +894,8 @@ button:active {
     }
 
     .quality__wrapper {
-        margin-bottom: 36px;
+        padding-bottom: 36px;
+        margin: 0 auto;
     }
 
     .val__container {
@@ -1073,8 +1077,8 @@ button:active {
         text-align: center;
     }
 
-    .quality__wrapper {
-        flex-direction: column;
+    .btnq {
+        width: 100%;
     }
 
     .hero {
